tests/baselines/reference/varNameConflictsWithImportInDifferentPartOfModule.errors.txt
varNameConflictsWithImportInDifferentPartOfModule.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
varNameConflictsWithImportInDifferentPartOfModule.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
varNameConflictsWithImportInDifferentPartOfModule.ts(6,5): error TS2440: Import declaration conflicts with local declaration of 'q'.


==== varNameConflictsWithImportInDifferentPartOfModule.ts (3 errors) ====
    module M1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var q = 5;
        export var s = '';
    }
    module M1 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export import q = M1.s; // Should be an error but isn't
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'q'.
    }